--- a/static/common/css/video.css
+++ b/static/common/css/video.css
@@ -14,6 +14,17 @@
     text-align: center;
     /* Center the text under the video */
 }
+/* 修改为针对 img 标签的样式 */
+.video-container img {
+    width: 100%;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+}
+
+.video-container img:hover {
+    transform: scale(1.05);
+}
 
 .video-container video {
     width: 60%;
